# qt-qml-ai-collection

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
Docs/static/: 404.md
Sources/Apps/: CMakeLists.txt
Sources/Apps/Resource/: qml.qrc
Sources/Apps/Resource/EntryPoint/: main.qml  qtquickcontrols2.conf
Sources/Apps/Resource/Face/: faceclassifier.xml
Sources/Apps/Resource/Todo/: Todo.qml
Sources/Apps/Resource/TodoList/: TodoList.qml
Sources/Apps/Source/Barcode/: barcode.h
Sources/Apps/Source/EntryPoint/: main.cpp  main.h
Sources/Apps/Source/Face/: face.cpp  face.h
Sources/Apps/Source/Hand/: hand.cpp  hand.h
Sources/Apps/Source/Nucleo/: nucleo.cpp  nucleo.h
Sources/Apps/Source/OrtNet/: OrtNet.cpp  OrtNet.h  OrtUtils.cpp  OrtUtils.h
Sources/Apps/Source/SGDet/: SGDet.cpp  SGDet.h
Sources/Apps/Source/Todo/: dbhelper.cpp  dbhelper.h  todo.cpp  todo.h  todomodel.cpp  todomodel.h
Sources/Apps/Source/TodoList/: TodoList.cpp  TodoList.h  TodoListDBHelper.cpp  TodoListDBHelper.h  TodoListModel.cpp  TodoListModel.h
